Changed the scroll method

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,14 +2,14 @@
 AndroidAppURL=http://127.0.0.1:4723/wd/hub
 
 //App location in our classpath
-app=
+app=C:\\Users\\nam_5\\OneDrive\\Documents\\Amazon\\Amazon\\src\\main\\resources\\Amazon_shopping.apk
 
 #Device name
-deviceName=
+deviceName=Nams
 #Platform name
 platformName=Android
 #platform version
-platformVersion=
+platformVersion=9
 
 #app package
 appPackage=com.amazon.mShop.android.shopping
