--- a/src/main/resources/credential.properties
+++ b/src/main/resources/credential.properties
@@ -1,6 +1,6 @@
 #This file contains the login credetials required for the login purpose
 #Mobile number
-mobileNumber=
+mobileNumber=8971130818
 
 #password
-password=
+password=rockonlife
